modules/cli/src/test/resources/good/syntax/inlinedunfolding/gdo/pack1/test3/Test3.scr
module good.syntax.inlinedunfolding.gdo.pack1.test3.Test3;


type <java> "..." from "..." as TTT;


global protocol Bar3(role A, role B)
{
	bar3() from A to B;
}

