modules/cli/src/test/resources/bad/disamb/modules/pack1/Foo1.scr
module bad.disamb.modules.pack1.Foo1;


global protocol Proto(role A, role B)
{
	2() from A to B;
}
